# robotic_hand

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.rviz  joints.yaml
launch/: all.launch  control.launch  display.launch  end_effector.launch  gazebo.launch
matrices_saved/: h.pickle  h_det.pickle  h_inversed_cheat.pickle  jacobian.pickle  jacobian_inversed.pickle  x.pickle  y.pickle  z.pickle
meshes/: base_link.STL  link_01.STL  link_02.STL  link_03.STL  link_04.STL
models/Cube1/: model.config  model.sdf
models/Cube2/: model.config  model.sdf
models/cube_obstacle/: model.config  model.sdf
models/stick_obstacle/: model.config  model.sdf
models/weldin_example/: model.config  model.sdf
scripts/: move_robot.py  straight_motion.py  test.py
scripts/robot/: calculating_effector_coordinates.py  calculating_the_jacobian.py  correct_position.py  initial_position.py  quadratic_error.py  robot_IK.py
src/: initial_position.h  robotic_hand_move_joint.cpp  robotic_hand_move_world_coordinate.cpp  robotic_hand_parameters.h
urdf/: robotic_hand.csv  robotic_hand.xacro
worlds/: blockin_cube.world  empty.world  simple_motion.world  stick_blockin_way.world  weldin_motion.world
